Completed code-along with Teddy. Thanks Teddy

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,12 @@
     <h1 id='title'> Commits on <span>Rails</span> Repository </h1>
   </div>
 
+<!-- selected in main.js canvas helper function -->
   <div id='graph-wrapper'>
 
   </div>
+
+  <h2 id='bar-info'></h2>
 
 </body>
 </html>
